[gd_scene load_steps=19 format=2]

[ext_resource path="res://press-start-2p.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://gfx/pongman2_bg.png" type="Texture" id=3]
[ext_resource path="res://gfx/pause_on.png" type="Texture" id=4]
[ext_resource path="res://gfx/pause.png" type="Texture" id=5]
[ext_resource path="res://gfx/controls.png" type="Texture" id=6]
[ext_resource path="res://gfx/controls_pressed.png" type="Texture" id=7]
[ext_resource path="res://txt/goshpxfont2.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 640, 0 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 360 )

[node name="Node" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
z_index = -4
texture = ExtResource( 3 )

[node name="gameObjects" type="CanvasLayer" parent="."]
pause_mode = 1

[node name="menu" type="CanvasLayer" parent="."]
layer = 2

[node name="settings" type="Control" parent="menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lang_button" type="Button" parent="menu/settings"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -108.0
margin_bottom = 26.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 13 )
text = "LANGUAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game name" type="Label" parent="menu/settings"]
margin_left = 176.0
margin_top = 24.0
margin_right = 464.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
text = "PongChamp"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pls dont sue" type="Label" parent="menu/settings/game name"]
margin_left = -144.0
margin_top = 40.0
margin_right = 435.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -200, 64 )
custom_fonts/font = SubResource( 9 )
text = "ATARI_PLS"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="menu/settings/game name"]
margin_left = -144.0
margin_top = 248.0
margin_right = 435.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( -200, 64 )
custom_fonts/font = SubResource( 9 )
text = "INFO"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="menu/settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -18.0
margin_right = 290.0
margin_bottom = 18.0
focus_neighbour_top = NodePath("../maxScore")
focus_neighbour_bottom = NodePath("../maxScore")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 46
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1_Playable" type="CheckBox" parent="menu/settings/HBoxContainer"]
margin_left = 7.0
margin_right = 155.0
margin_bottom = 36.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 7 )
pressed = true
text = "1_PLAYABLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="menu/settings/HBoxContainer"]
margin_left = 223.0
margin_right = 355.0
margin_bottom = 36.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
action_mode = 0
text = "START_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2_Playable" type="CheckBox" parent="menu/settings/HBoxContainer"]
margin_left = 424.0
margin_right = 572.0
margin_bottom = 36.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 7 )
pressed = true
text = "2_PLAYABLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxScore" type="HSlider" parent="menu/settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = 52.0
margin_right = 48.0
margin_bottom = 68.0
min_value = 1.0
max_value = 15.0
value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxScoreText" type="Label" parent="menu/settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 28.0
margin_right = 132.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 11 )
text = "SCORE_TO_WIN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Control" parent="menu"]
pause_mode = 2
visible = false
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="menu/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -36.0
margin_right = 90.0
margin_bottom = 36.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="menu/pause/VBoxContainer"]
margin_right = 180.0
margin_bottom = 26.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
action_mode = 0
text = "PAUSE_CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="menu/pause/VBoxContainer"]
margin_left = 6.0
margin_top = 46.0
margin_right = 174.0
margin_bottom = 72.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
action_mode = 0
text = "PAUSE_TO_MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="afterlife" type="Control" parent="menu"]
visible = false
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="congrats" type="Label" parent="menu/afterlife"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -76.0
margin_right = 168.0
margin_bottom = -41.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "wow congrats
player !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="menu/afterlife"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -32.5
margin_right = 84.0
margin_bottom = 32.5
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="menu/afterlife/VBoxContainer"]
margin_left = 12.0
margin_right = 156.0
margin_bottom = 26.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
action_mode = 0
text = "END_RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="menu/afterlife/VBoxContainer"]
margin_top = 39.0
margin_right = 168.0
margin_bottom = 65.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
action_mode = 0
text = "PAUSE_TO_MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" type="Control" parent="UI"]
visible = false
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_player_1" type="Control" parent="UI/GUI"]
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_up" type="TouchScreenButton" parent="UI/GUI/ctrl_player_1"]
modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 16, 260 )
scale = Vector2( 2, -2 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
passby_press = true
action = "plr_left_up"
visibility_mode = 1

[node name="left_down" type="TouchScreenButton" parent="UI/GUI/ctrl_player_1"]
modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 16, 270 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
passby_press = true
action = "plr_left_down"
visibility_mode = 1

[node name="ctrl_player_2" type="Control" parent="UI/GUI"]
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_up" type="TouchScreenButton" parent="UI/GUI/ctrl_player_2"]
modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 550, 258 )
scale = Vector2( 2, -2 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
passby_press = true
action = "plr_right_up"
visibility_mode = 1

[node name="right_down" type="TouchScreenButton" parent="UI/GUI/ctrl_player_2"]
modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 550, 270 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
passby_press = true
action = "plr_right_down"
visibility_mode = 1

[node name="pauseButton" type="TextureButton" parent="UI/GUI"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.666667 )
margin_left = 304.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 24.0
rect_scale = Vector2( 2, 2 )
action_mode = 0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score left" type="Label" parent="UI/GUI"]
margin_left = 96.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score right" type="Label" parent="UI/GUI"]
margin_left = 480.0
margin_top = 8.0
margin_right = 544.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2( 0, 360 )
shape = SubResource( 1 )

[node name="death" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="death"]
position = Vector2( 640, 0 )
shape = SubResource( 2 )

[connection signal="button_down" from="menu/settings/lang_button" to="." method="langSwap"]
[connection signal="toggled" from="menu/settings/HBoxContainer/1_Playable" to="." method="_on_Playable_toggled" binds= [ 0 ]]
[connection signal="button_down" from="menu/settings/HBoxContainer/start_button" to="." method="startGame"]
[connection signal="toggled" from="menu/settings/HBoxContainer/2_Playable" to="." method="_on_Playable_toggled" binds= [ 1 ]]
[connection signal="value_changed" from="menu/settings/maxScore" to="." method="_on_maxScore_value_changed"]
[connection signal="button_down" from="menu/pause/VBoxContainer/continue" to="." method="pauseToggle"]
[connection signal="button_down" from="menu/pause/VBoxContainer/quit" to="." method="stopEverything"]
[connection signal="button_down" from="menu/afterlife/VBoxContainer/restart" to="." method="startGame"]
[connection signal="button_down" from="menu/afterlife/VBoxContainer/quit" to="." method="stopEverything"]
[connection signal="button_down" from="UI/GUI/pauseButton" to="." method="pauseToggle"]
